# StartupIQ

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  TASKS.md  docker-compose.yml  pyproject.toml  requirements.txt  test.py
backend/: main.py
backend/agents/: __init__.py  base_agent.py  business_agent.py  competition_agent.py  discovery_agent.py  planner_agent.py  profile_generator.py  report_agent.py  research_agent.py  reviewer_agent.py
backend/api/: __init__.py  (+5 more)
frontend/: index.html  package-lock.json  package.json  vite.config.js
specifications/: 00-foundation.md  01-prd.md  02-architecture.md  03-workflows.md  04-agents.md  05-prompts.md  06-api.md  07-implementation-plan.md
tests/: test_agent_edge_cases.py  test_agno_integration.py  test_api.py  test_api_integration_advanced.py  test_base_agent.py  test_base_team.py  test_business_agent.py  test_competition_agent.py  test_deterministic_search.py  test_discovery_agent.py  test_discovery_team.py  test_discovery_workflow.py  test_execution_manager.py  test_founder_validation.py  test_instrumentation.py  test_performance.py  test_phase2_infrastructure.py  test_phase3_infrastructure.py  test_phase5_validation.py  test_pipeline_internal.py  test_pipeline_teams_integration.py  test_planner_agent.py  test_profile_generator.py  test_prompt_quality.py  test_report_agent.py  test_research_agent.py  test_reviewer_agent.py  test_team_detail.py  test_tool_edge_cases.py  test_tool_integration.py  test_validation_pipeline.py  test_validation_team_execution.py  test_validation_team_smoke.py
(+69 files in other folders)
